--- a/index.html
+++ b/index.html
@@ -31,7 +31,12 @@
         </div>
         <a href="#" class="tumu-link">Tüm Çiçekleri Keşfet →</a>
     </section>
-
+<section class="hakkimizda">
+    <h2>✨ Hikayemiz: Sevgiyle Başlayan Her Şey</h2>
+    <p>Sevgi Çiçek Evi, bir demet çiçeğin gücüne inanan küçük bir ekibin hayaliyle kuruldu. Bizim için bir çiçek sadece bir bitki değil; bir duygu, bir kutlama ve en içten dileklerin taşıyıcısıdır.</p>
+    <p>Bu yüzden, size sunduğumuz her aranjmanı ve hediyelik eşyayı büyük bir özenle, tıpkı kendimiz için hazırlar gibi, sevgiyle seçiyoruz. Taptaze çiçeklerimiz ve özgün hediyelik koleksiyonumuzla, hayatınızdaki özel anlara kalıcı bir iz bırakmayı hedefliyoruz.</p>
+    <p>Siz de bir sonraki sevgi mesajınızı bizimle gönderin!</p>
+</section>
     <section class="avantajlar">
         <h2>💖 Neden Sevgi Çiçek Evi?</h2>
         <ul>
@@ -47,3 +52,13 @@
     </footer>
 </body>
 </html>
+/* Hakkımızda bölümü için eklenen stil */
+.hakkimizda {
+    background-color: #fff; /* Beyaz arka plan */
+    padding: 50px 20px;
+}
+.hakkimizda p {
+    max-width: 800px;
+    margin: 15px auto;
+    line-height: 1.6;
+}
