--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header class="hero">
         <div class="logo-container">
-            <img src="logo-son.png" alt="Sevgi Çiçek Evi Logo"> 
+            <img src="logo-son-yeni.png" alt="Sevgi Çiçek Evi Logo">
             <h1>Sevgi Çiçek Evi</h1>
             <p>Sevgiyi Göndermenin En Güzel Yolu</p>
         </div>
