--- a/index.html
+++ b/index.html
@@ -19,11 +19,33 @@
 
     <section id="urunler" class="cicekler">
         <h2>💐 Taptaze Çiçek Koleksiyonu</h2>
-        <div class="urun-grid">
-            <div class="urun-kart">
-                <h3>Gül Aşkı</h3>
-                <p>Kırmızı güllerle aşkınızı ifade edin.</p>
-            </div>
+       <div class="urun-grid">
+    </div> ```
+
+### 2. 📝 Yapıştırılacak Yeni Bölüm (Yeni Kod)
+
+Bu kod bloğunun **TAMAMINI** kopyala ve sildiğin yerin yerine yapıştır:
+
+```html
+<div class="urun-grid">
+    <div class="urun-kart">
+        <h3>❤️ Özel Tasarım Buketler</h3>
+        <p>Günün en taze çiçekleriyle hazırlanan, duygularınızı en iyi ifade eden el yapımı buketler. Her kutlama için eşsiz bir seçim.</p>
+        <a href="[https://www.instagram.com/sevgi.cicekevi/]" class="tumu-link">Buketleri Keşfet →</a>
+    </div>
+
+    <div class="urun-kart">
+        <h3>🪴 Salon ve Saksı Çiçekleri</h3>
+        <p>Ev ve ofisleriniz için uzun ömürlü, bakımı kolay ve ortamın havasını değiştiren dayanıklı bitki koleksiyonu.</p>
+        <a href="[https://www.instagram.com/sevgi.cicekevi/]" class="tumu-link">Saksıları Gör →</a>
+    </div>
+
+    <div class="urun-kart">
+        <h3>🎁 Konsept Hediyelik Eşyalar</h3>
+        <p>Çiçeklerin yanında mutluluğu tamamlayan mumlar, kokular, çikolatalar ve özel tasarım hediye setleri.</p>
+        <a href="[Hhttps://www.instagram.com/sevgi.cicekevi/]" class="tumu-link">Hediyelikleri İncele →</a>
+    </div>
+</div>
             <div class="urun-kart">
                 <h3>Bahar Neşesi</h3>
                 <p>Mevsimin en güzel laleleri ve papatyaları.</p>
